configuration of actions and test code